--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,11 @@ body {
   background-color: #1d1d1d;
   color: #fff;
 }
+
+html {
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none; /* Firefox */
+}
+html::-webkit-scrollbar {
+  display: none; /* Chrome/Safari */
+}
